--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
 $color-primary: #2a9bd8;
-$color-primary-light: #83cbec;
+$color-primary-light: #71b0ce;
 $color-primary-dark: #005494;
 
 $color-secondary-light: #ffb900;
