--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,11 +1,16 @@
 .header {
   height: 95vh;
+  // background-image: linear-gradient(
+  //     to right bottom,
+  //     rgba($color-primary-light, 0.8),
+  //     rgba($color-primary-dark, 0.9)
+  //   ),
+  //   url("../img/kosel.jpeg");
   background-image: linear-gradient(
-      to right bottom,
-      rgba($color-primary-light, 0.8),
-      rgba($color-primary-dark, 0.9)
-    ),
-    url("../img/kosel.jpeg");
+    to right bottom,
+    rgba($color-primary-dark, 0.9) 50%,
+    rgba($color-primary-light, 0.8) 50%
+  );
   background-size: cover;
   background-position: bottom;
 
