--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -9,6 +9,12 @@
 .col {
   flex: 1;
 }
+
+// .break {
+//   flex-basis: 100%;
+//   height: 0;
+// }
+
 // .row {
 //   max-width: $grid-width;
 //   background-color: #eee;
