--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,8 @@
 @import "components/feature-box";
 @import "components/card";
 @import "components/popup";
+@import "components/questions";
+@import "components/solution";
 @import "components/story";
 
 @import "layout/footer";
