--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $color-tertiary-dark: #28b485;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
+$color-grey-light-3: rgb(219, 219, 219);
 
 $color-grey-dark: #777;
 $color-grey-dark-2: #333;
