--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -73,6 +73,7 @@
     padding: 0.5rem 1rem;
     font-size: $default-font-size;
     transition: all 0.2s;
+    position: relative;
   }
 
   &:hover {
