--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,11 +1,55 @@
-.section-about {
+.section-questions {
   background-color: $color-grey-light-1;
-  padding: 25rem 0;
+  padding: 25rem 2rem 20rem;
   margin-top: -20vh;
+  position: relative;
+  z-index: -1;
+}
+
+.questions-container {
+  justify-content: flex-start;
+  text-align: center;
+
+  &__icon {
+    position: absolute;
+    transform: translateY(-50%);
+    font-size: 60rem;
+    color: $color-grey-light-3;
+    font-family: serif;
+    font-weight: 900;
+    margin-top: 5rem;
+
+    &--big {
+      top: 50%;
+      left: 10%;
+      opacity: 0.7;
+
+      @media (max-width: 2830px) {
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    &--left {
+      top: 50%;
+      left: 10%;
+      opacity: 0.5;
+      font-size: 40rem;
+    }
+    &--right {
+      top: 50%;
+      left: 70%;
+      opacity: 0.5;
+      font-size: 40rem;
+    }
+  }
+}
+.section-solution {
+  background-color: $color-grey-light-1;
+  padding: 0 2rem 20rem;
 }
 
 .section-features {
-  padding: 20rem 0;
+  padding: 12rem 0;
   // background-image: linear-gradient(
   //     to right bottom,
   //     rgba($color-primary-light, 0.8),
