--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,32 @@
   }
 }
 
+@-webkit-keyframes zoomIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(3rem);
+            transform: translateY(3rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(3rem);
+            transform: translateY(3rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
 *,
 *::after,
 *::before {
@@ -326,7 +352,7 @@ body {
   font-size: 1.8rem;
   border: 2px solid #2a9bd8;
   color: #333;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 .contact__link::after {
@@ -679,8 +705,24 @@ body {
 .questions__question {
   width: 20%;
   min-width: 20rem;
-  padding-bottom: 2rem;
-  border-bottom: 1px solid #005494;
+  padding: 2rem 5rem;
+  background-color: rgba(219, 219, 219, 0.5);
+  border-radius: 3px;
+  color: #575757;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.solution-title {
+  -webkit-animation: zoomIn 0.8s;
+          animation: zoomIn 0.8s;
 }
 
 .paragraph {
@@ -877,7 +919,7 @@ body {
 
 .section-questions {
   background-color: #f7f7f7;
-  padding: 25rem 2rem 20rem;
+  padding: 30rem 2rem 15rem;
   margin-top: -20vh;
   position: relative;
   z-index: -1;
@@ -899,12 +941,13 @@ body {
   font-family: serif;
   font-weight: 900;
   margin-top: 5rem;
+  text-shadow: 0 5px 5px rgba(0, 84, 148, 0.5);
 }
 
 .questions-container__icon--big {
   top: 50%;
   left: 10%;
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 @media (max-width: 2830px) {
@@ -918,14 +961,14 @@ body {
 .questions-container__icon--left {
   top: 50%;
   left: 10%;
-  opacity: 0.5;
+  opacity: 0.3;
   font-size: 40rem;
 }
 
 .questions-container__icon--right {
   top: 50%;
   left: 70%;
-  opacity: 0.5;
+  opacity: 0.3;
   font-size: 40rem;
 }
 
