--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -16,6 +16,7 @@ $color-grey-light-2: #eee;
 $color-grey-light-3: rgb(219, 219, 219);
 
 $color-grey-dark: #777;
+$color-grey-medium: rgb(87, 87, 87);
 $color-grey-dark-2: #333;
 $color-white: #fff;
 $color-black: #000;
