--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -41,3 +41,15 @@
     transform: translateX(0);
   }
 }
+
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
