--- a/sass/components/_questions.scss
+++ b/sass/components/_questions.scss
@@ -8,7 +8,14 @@
   &__question {
     width: 20%;
     min-width: 20rem;
-    padding-bottom: 2rem;
-    border-bottom: 1px solid $color-primary-dark;
+    padding: 2rem 5rem;
+    // outline: 1px solid $color-primary-dark;
+    // outline-offset: 1rem;
+    background-color: rgba($color-grey-light-3, 0.5);
+    border-radius: 3px;
+    color: $color-grey-medium;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
