--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 .section-questions {
   background-color: $color-grey-light-1;
-  padding: 25rem 2rem 20rem;
+  padding: 30rem 2rem 15rem;
   margin-top: -20vh;
   position: relative;
   z-index: -1;
@@ -18,11 +18,12 @@
     font-family: serif;
     font-weight: 900;
     margin-top: 5rem;
+    text-shadow: 0 5px 5px rgba($color-primary-dark, 0.5);
 
     &--big {
       top: 50%;
       left: 10%;
-      opacity: 0.7;
+      opacity: 0.5;
 
       @media (max-width: 2830px) {
         left: 50%;
@@ -32,13 +33,13 @@
     &--left {
       top: 50%;
       left: 10%;
-      opacity: 0.5;
+      opacity: 0.3;
       font-size: 40rem;
     }
     &--right {
       top: 50%;
       left: 70%;
-      opacity: 0.5;
+      opacity: 0.3;
       font-size: 40rem;
     }
   }
