--- a/sass/components/_questions.scss
+++ b/sass/components/_questions.scss
@@ -17,5 +17,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0.5rem 0.5rem 1rem rgba($color-black, 0.2);
   }
 }
