--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -18,15 +18,15 @@
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   position: relative;
 
-  // &__logo-box {
-  //   position: absolute;
-  //   top: 4rem;
-  //   left: 4rem;
-  // }
+  &__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem;
+  }
 
-  // &__logo {
-  //   height: 3.5rem;
-  // }
+  &__logo {
+    height: 5.5rem;
+  }
 
   &__text-box {
     position: absolute;
