--- a/sass/components/_solution.scss
+++ b/sass/components/_solution.scss
@@ -38,6 +38,7 @@
   transform: translate(-50%, -50%);
   font-size: 30rem;
   color: #293d5d;
+  text-shadow: 0 5px 5px rgba($color-primary-light, 0.5);
 }
 
 .paragraph {
