--- a/css/main.css
+++ b/css/main.css
@@ -740,6 +740,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  gap: 10rem !important;
 }
 
 .solution__item {
