--- a/sass/components/_solution.scss
+++ b/sass/components/_solution.scss
@@ -10,6 +10,7 @@
   &__items {
     margin-bottom: 20rem !important;
     justify-content: center;
+    gap: 10rem !important;
   }
   &__item {
     position: relative;
@@ -23,6 +24,7 @@
     text-transform: capitalize;
     text-align: center;
     // background-color: orangered;
+    // margin-bottom: 10rem;
   }
   &__item-header {
     position: relative;
