--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -34,5 +34,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    @media (max-width: 1450px) {
+      top: 50%;
+    }
   }
 }
