--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,6 +4,10 @@ body {
   line-height: 1.7;
   color: $color-grey-dark;
   padding: 3rem;
+  overflow-x: hidden;
+  @media (max-width: 600px) {
+    padding: 0;
+  }
 }
 
 .heading-primary {
@@ -18,7 +22,12 @@ body {
     font-weight: 400;
     letter-spacing: 2rem;
     animation: moveInLeft 1s ease-out;
-    // line-height: 1;
+    line-height: 1.3;
+    @media (max-width: 600px) {
+      font-size: 3rem;
+      letter-spacing: 1.8rem;
+      margin-bottom: 2rem;
+    }
   }
 
   &--sub {
@@ -27,6 +36,10 @@ body {
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out;
+    @media (max-width: 600px) {
+      font-size: 2rem;
+      letter-spacing: 2px;
+    }
   }
 }
 
