--- a/sass/components/_bg-video.scss
+++ b/sass/components/_bg-video.scss
@@ -7,6 +7,9 @@
   z-index: -1;
   opacity: 0.4;
   overflow: hidden;
+  @media (max-width: 800px) {
+    display: none;
+  }
 
   &__content {
     height: 100%;
