--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -8,6 +8,11 @@
   padding-left: 9rem;
   font-size: $default-font-size;
   transform: skewX(-12deg);
+  @media (max-width: 800px) {
+    transform: none;
+    padding: 2rem;
+    width: 90%;
+  }
 
   &__shape {
     width: 15rem;
@@ -19,22 +24,24 @@
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    @media (max-width: 800px) {
+      // float: none;
+      // shape-outside: none;
+      transform: none;
+    }
   }
 
   &__image {
     height: 100%;
     transition: all 0.5s;
     transform: scale(1.05);
-
-    // &--1 {
-    // }
-    // &--2 {
-    //   transform: translateX(2.5rem) scale(1.5);
-    // }
   }
 
   &__text {
     transform: skewX(12deg);
+    @media (max-width: 800px) {
+      transform: none;
+    }
   }
 
   &__caption {
