--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -70,7 +70,7 @@
     display: inline-block;
     text-decoration: none;
     border-bottom: 1px solid $color-primary;
-    padding: 0.5rem 1rem;
+    padding: 0.8rem 2rem;
     font-size: $default-font-size;
     transition: all 0.2s;
     position: relative;
@@ -86,6 +86,14 @@
   &:active {
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
     transform: translateY(0);
+  }
+  &__dark {
+    background: $color-primary;
+    color: $color-white !important;
+    &:hover {
+      background: $color-primary-dark;
+      color: $color-grey-light-1 !important;
+    }
   }
 }
 
