--- a/css/main.css
+++ b/css/main.css
@@ -486,23 +486,13 @@ body {
 }
 
 .card {
-  -webkit-perspective: 150rem;
-          perspective: 150rem;
-  -moz-perspective: 150rem;
   position: relative;
   height: 52rem;
 }
 
 .card__side {
-  height: 52rem;
-  -webkit-transition: all 0.8s ease;
-  transition: all 0.8s ease;
-  position: absolute;
-  top: 0;
-  left: 0;
+  height: 42rem;
   width: 100%;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
   border-radius: 3px;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
           box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
@@ -511,36 +501,6 @@ body {
 
 .card__side--front {
   background-color: #fff;
-}
-
-.card__side--back {
-  -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
-}
-
-.card__side--back-1 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#ffb900), to(#ff7730));
-  background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
-}
-
-.card__side--back-2 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#71b0ce), to(#005494));
-  background-image: linear-gradient(to right bottom, #71b0ce, #005494);
-}
-
-.card__side--back-3 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#7ed56f), to(#28b485));
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
-}
-
-.card:hover .card__side--front {
-  -webkit-transform: rotateY(-180deg);
-          transform: rotateY(-180deg);
-}
-
-.card:hover .card__side--back {
-  -webkit-transform: rotateY(0);
-          transform: rotateY(0);
 }
 
 .card__picture {
@@ -552,19 +512,18 @@ body {
 }
 
 .card__picture--1 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#ffb900), to(#ff7730)), url(../img/barmitzva-boy.jpg);
-  background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/barmitzva-boy.jpg);
-  background-position: bottom;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#ffb900), to(#ff7730)), url(../img/bar-mitzvah.jpg);
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/bar-mitzvah.jpg);
 }
 
 .card__picture--2 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#71b0ce), to(#005494)), url(../img/shul.jpg);
-  background-image: linear-gradient(to right bottom, #71b0ce, #005494), url(../img/shul.jpg);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#71b0ce), to(#005494)), url(../img/siddur.jpg);
+  background-image: linear-gradient(to right bottom, #71b0ce, #005494), url(../img/siddur.jpg);
 }
 
 .card__picture--3 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#7ed56f), to(#28b485)), url(../img/learning-talmud.jpg);
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../img/learning-talmud.jpg);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#7ed56f), to(#28b485)), url(../img/kotel.jpg);
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../img/kotel.jpg);
 }
 
 .card__heading {
@@ -579,71 +538,12 @@ body {
   width: 75%;
 }
 
-.card__heading-span {
-  padding: 1rem 1.5rem;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
-}
-
-.card__heading-span--1 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 185, 0, 0.85)), to(rgba(255, 119, 48, 0.85)));
-  background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85));
-}
-
-.card__heading-span--2 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(113, 176, 206, 0.85)), to(rgba(0, 84, 148, 0.85)));
-  background-image: linear-gradient(to right bottom, rgba(113, 176, 206, 0.85), rgba(0, 84, 148, 0.85));
-}
-
-.card__heading-span--3 {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(126, 213, 111, 0.85)), to(rgba(40, 180, 133, 0.85)));
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85));
-}
-
 .card__details {
   padding: 3rem;
-}
-
-.card__details ul {
-  list-style: none;
   width: 80%;
   margin: auto;
-}
-
-.card__details li {
   text-align: center;
-  font-size: 1.5rem;
-  padding: 1rem;
-}
-
-.card__details li:not(:last-child) {
-  border-bottom: 1px solid #eee;
-}
-
-.card__cta {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 90%;
-  text-align: center;
-}
-
-.card__price-box {
-  text-align: center;
-  margin-bottom: 8rem;
-  color: #fff;
-}
-
-.card__price-only {
-  font-size: 1.4rem;
-  text-transform: uppercase;
-}
-
-.card__price-value {
-  font-size: 6rem;
-  font-weight: 100;
+  font-size: 2.2rem;
 }
 
 .popup {
@@ -1049,10 +949,10 @@ body {
 
 .header {
   height: 95vh;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(0, 84, 148, 0.9)), to(rgba(113, 176, 206, 0.8)));
-  background-image: linear-gradient(to right bottom, rgba(0, 84, 148, 0.9), rgba(113, 176, 206, 0.8));
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(113, 176, 206, 0.8)), to(rgba(0, 84, 148, 0.9))), url("../img/torah.jpg");
+  background-image: linear-gradient(to right bottom, rgba(113, 176, 206, 0.8), rgba(0, 84, 148, 0.9)), url("../img/torah.jpg");
   background-size: cover;
-  background-position: bottom;
+  background-position: left;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   position: relative;
@@ -1085,7 +985,7 @@ body {
 
 .section-questions {
   background-color: #f7f7f7;
-  padding: 30rem 2rem 25rem;
+  padding: 20rem 2rem 25rem;
   margin-top: -20vh;
   position: relative;
   z-index: -1;
@@ -1170,8 +1070,6 @@ body {
   padding: 22rem 2rem 12rem;
   background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(113, 176, 206, 0.8)), color-stop(60%, rgba(0, 84, 148, 0.9)));
   background-image: linear-gradient(to right bottom, rgba(113, 176, 206, 0.8), rgba(0, 84, 148, 0.9) 60%);
-  background-size: cover;
-  background-position: bottom;
   -webkit-transform: skewY(-4deg);
           transform: skewY(-4deg);
   margin-top: -10rem;
@@ -1180,6 +1078,12 @@ body {
 .section-features > * {
   -webkit-transform: skewY(4deg);
           transform: skewY(4deg);
+}
+
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 15rem 0 0 0;
+  margin-top: -10rem;
 }
 
 .section-stories {
@@ -1195,7 +1099,7 @@ body {
 }
 
 .contact {
-  background: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url("../img/journey.jpeg") center/cover no-repeat;
+  background: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url("../img/shawl.jpg") top/cover no-repeat;
   border-radius: 3px;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
           box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
@@ -1205,7 +1109,7 @@ body {
 
 @media (max-width: 750px) {
   .contact {
-    background: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 60%, transparent 60%), url("../img/journey.jpeg") center/cover no-repeat;
+    background: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 60%, transparent 60%), url("../img/shawl.jpg") center/cover no-repeat;
   }
 }
 
@@ -1293,5 +1197,9 @@ body {
   font-size: 1.4rem;
   letter-spacing: 1px;
   color: rgba(255, 255, 255, 0.8);
+}
+
+.offer--dark {
+  color: #005494;
 }
 /*# sourceMappingURL=main.css.map */
