--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,18 +1,18 @@
 .header {
   height: 95vh;
-  // background-image: linear-gradient(
-  //     to right bottom,
-  //     rgba($color-primary-light, 0.8),
-  //     rgba($color-primary-dark, 0.9)
-  //   ),
-  //   url("../img/kosel.jpeg");
   background-image: linear-gradient(
-    to right bottom,
-    rgba($color-primary-dark, 0.9),
-    rgba($color-primary-light, 0.8)
-  );
+      to right bottom,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.9)
+    ),
+    url("../img/torah.jpg");
+  // background-image: linear-gradient(
+  //   to right bottom,
+  //   rgba($color-primary-dark, 0.9),
+  //   rgba($color-primary-light, 0.8)
+  // );
   background-size: cover;
-  background-position: bottom;
+  background-position: left;
 
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
