--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,7 @@
 .section-questions {
   background-color: $color-grey-light-1;
-  padding: 30rem 2rem 25rem;
+
+  padding: 20rem 2rem 25rem;
   margin-top: -20vh;
   position: relative;
   z-index: -1;
@@ -78,8 +79,6 @@
     rgba($color-primary-light, 0.8),
     rgba($color-primary-dark, 0.9) 60%
   );
-  background-size: cover;
-  background-position: bottom;
   transform: skewY(-4deg);
   margin-top: -10rem;
 
@@ -88,11 +87,11 @@
   }
 }
 
-// .section-tours {
-//   background-color: $color-grey-light-1;
-//   padding: 25rem 0 15rem 0;
-//   margin-top: -10rem;
-// }
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 15rem 0 0 0;
+  margin-top: -10rem;
+}
 
 .section-stories {
   padding: 15rem 0;
@@ -115,7 +114,7 @@
       rgba($color-white, 0.8) 50%,
       transparent 50%
     ),
-    url("../img/journey.jpeg") center/cover no-repeat;
+    url("../img/shawl.jpg") top/cover no-repeat;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
   width: 90%;
@@ -126,7 +125,7 @@
         rgba($color-white, 0.8) 60%,
         transparent 60%
       ),
-      url("../img/journey.jpeg") center/cover no-repeat;
+      url("../img/shawl.jpg") center/cover no-repeat;
   }
   @media (max-width: 600px) {
     background-image: url("../img/journey.jpeg");
@@ -185,4 +184,8 @@
   font-size: 1.4rem;
   letter-spacing: 1px;
   color: rgba($color-white, 0.8);
+
+  &--dark {
+    color: $color-primary-dark;
+  }
 }
