--- a/css/main.css
+++ b/css/main.css
@@ -319,6 +319,11 @@ body {
   background-color: #2a9bd8;
 }
 
+.btn--centered {
+  margin: auto;
+  display: inline-block;
+}
+
 .btn::after {
   content: "";
   display: inline-block;
@@ -468,6 +473,7 @@ body {
   transition: transform 0.3s;
   transition: transform 0.3s, -webkit-transform 0.3s;
   min-width: 20rem;
+  margin-bottom: 1rem;
 }
 
 .feature-box__icon {
@@ -650,6 +656,63 @@ body {
   color: #2a9bd8;
 }
 
+.pricing {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+          box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+}
+
+.pricing__title {
+  margin-top: 5rem;
+}
+
+.price-list-container {
+  position: relative;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#71b0ce), to(#005494));
+  background-image: linear-gradient(to right bottom, #71b0ce, #005494);
+  padding: 10rem 4rem 4rem;
+  border-radius: 3px;
+}
+
+.pricing-list {
+  font-size: 1.8rem;
+  color: #f7f7f7;
+  -webkit-column-count: 2;
+          column-count: 2;
+  -webkit-column-gap: 8rem;
+          column-gap: 8rem;
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+}
+
+@media (max-width: 850px) {
+  .pricing-list {
+    -webkit-column-count: 1;
+            column-count: 1;
+  }
+}
+
+.pricing-list__item {
+  margin-left: 8.5rem;
+}
+
+.pricing-list__item:not(:first-child) {
+  margin-top: 2rem;
+}
+
+@media (max-width: 850px) {
+  .pricing-list__item {
+    -webkit-column-count: 1;
+            column-count: 1;
+    margin-left: 0;
+  }
+}
+
 .questions {
   z-index: 1000;
   display: -webkit-box;
@@ -696,7 +759,7 @@ body {
 }
 
 .solution__items {
-  margin-bottom: 20rem !important;
+  margin-bottom: 10rem !important;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -714,10 +777,17 @@ body {
   text-align: center;
 }
 
+@media (max-width: 769px) {
+  .solution__item:not(:last-child) {
+    margin-bottom: 6rem;
+  }
+}
+
 .solution__item-header {
   position: relative;
   z-index: 1000;
   font-size: 2rem;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .solution__text {
@@ -733,9 +803,9 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  font-size: 30rem;
+  font-size: 15rem;
   color: #293d5d;
-  text-shadow: 0 5px 5px rgba(113, 176, 206, 0.5);
+  text-shadow: 0 2px 4px rgba(113, 176, 206, 0.5);
 }
 
 .paragraph {
@@ -1100,6 +1170,11 @@ body {
   margin-top: -5rem;
 }
 
+.section-pricing {
+  background-color: #f7f7f7;
+  padding: 10rem 2rem;
+}
+
 .section-contact {
   padding: 15rem 0;
   background-image: -webkit-gradient(linear, left top, right bottom, from(#71b0ce), to(#005494));
@@ -1123,7 +1198,6 @@ body {
 
 @media (max-width: 600px) {
   .contact {
-    background-image: url("../img/journey.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
