--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,6 +7,7 @@
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
   transition: transform 0.3s;
   min-width: 20rem;
+  margin-bottom: 1rem;
 
   &__icon {
     font-size: 6rem;
